# emucap

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.ko.md  README.md  build.rs
_tests/adapters/: build-lock-test.sh
adapters/_common/: build-env.sh  build-lock.sh  runtime-env.sh
adapters/desmume-nds/: .gitignore  LICENSE  README.md  build.sh  launch.sh
adapters/dolphin/: .gitattributes  EmuCap.cpp  EmuCap.h  LICENSE  README.md  build.ps1  build.sh  emucap-gdb-bridge.py  launch-native.ps1  launch.ps1
adapters/flycast/: LICENSE  README.ko.md  README.md  build.sh  emucap-gdb-bridge.py  emucap.cpp  emucap.h  emucap_failure.cpp  emucap_failure.h  emucap_failure_test.cpp  emucap_input.h  emucap_input_test.cpp  launch.sh  live-fatal-test.py  test-failure.sh
adapters/mame-neogeo/: LICENSE  README.md  build.sh
adapters/mame-pc98/: LICENSE  README.md  build.sh  emucap-gdb-bridge.py  launch.sh  mame-headless.sh
adapters/mednafen/: LICENSE  README.ko.md  README.md  build.sh  emucap.cpp  emucap.h  emucap_input.h  emucap_input_test.cpp  launch.sh
adapters/mesen2/: LICENSE  README.ko.md  README.md  bank_tagging_test.lua  build.ps1  build.sh  emucap-core.lua  emucap-gb.lua  emucap-gba.lua  emucap-live.lua  emucap-nes.lua  emucap-sms.lua  emucap-snes.lua  emucap.lua  emucap_state_io.lua  emucap_state_io_test.lua  emucap_tx.lua  emucap_tx_test.lua  esc_test.lua  flush_deferred_test.lua  input_mapping_test.lua  json_decode_test.lua  launch.ps1  launch.sh  live-reconnect-test.py  mesen_api_probe.lua  native_halt_service_test.lua  write_hex_test.lua
adapters/mupen64plus/: LICENSE  README.md  build.sh
adapters/pcsx-redux/: build.sh  emucap-live.lua  launch.sh
adapters/pcsx2/: LICENSE  README.md  build.sh
adapters/ppsspp/: LICENSE  README.md  build.sh  launch.sh
contracts/: catalog.json  exceptions.json
licenses/: README.md
src/: cli.rs  contracts_tests.rs  gdb_rsp.rs  gdb_rsp_tests.rs  lib.rs  main.rs  n64_adapter.rs  n64_adapter_tests.rs  nds_bridge.rs  nds_bridge_temporal_tests.rs  nds_bridge_tests.rs  neogeo_bridge.rs  neogeo_bridge_tests.rs  numparse.rs  offload.rs  pc98_bridge.rs  pc98_bridge_temporal_tests.rs  pc98_bridge_tests.rs  pcsx2_bridge.rs  pcsx2_bridge_tests.rs  ppsspp_bridge.rs  ppsspp_bridge_temporal_tests.rs  ppsspp_bridge_tests.rs  ppsspp_bridge_transport_tests.rs  rom.rs  rom_tests.rs
src/analysis/: bisect.rs  bisect_tests.rs  diff.rs  diff_tests.rs  dump.rs  dump_tests.rs  mod.rs  regression.rs  regression_tests.rs  state_diff.rs  state_diff_tests.rs
src/bundle/: error.rs  finalize.rs  finalize_tests.rs  manifest.rs  manifest_tests.rs  mod.rs  raw.rs  raw_tests.rs  summary.rs  summary_tests.rs
src/commands/: diff.rs  finalize.rs  inspect.rs  mod.rs  regression.rs  track.rs
src/launch/: desmume_nds.rs  dolphin.rs  dolphin_tests.rs  flycast.rs  mame.rs  mame_neogeo.rs  mame_neogeo_tests.rs  mednafen.rs  mesen.rs  mesen_tests.rs  mod.rs  mod_tests.rs  mupen64plus.rs  mupen64plus_tests.rs  pcsx2.rs  pcsx2_tests.rs  ppsspp.rs  spec.rs  spec_tests.rs
src/live/: broker.rs  broker_link.rs  broker_link_tests.rs  broker_tests.rs  continuity.rs  continuity_tests.rs  link.rs  link_tests.rs  mod.rs  protocol.rs  protocol_tests.rs  reconnect.rs  reconnect_tests.rs  runtime.rs  runtime_tests.rs  tcp.rs  tcp_tests.rs  temporal.rs  temporal_tests.rs  tools.rs  tools_socket_tests.rs  tools_tests.rs
src/nds_bridge/: breakpoints.rs  cpu.rs  debug.rs  input_state.rs  service.rs  (+1 more)
tests/: bridge_lifecycle.rs  cli.rs  regression_add.rs  track_cli.rs
tools/: register-codex-mcp.ps1  register-codex-mcp.sh
(+67 files in other folders)
