[package]
name = "emucap"
version = "0.10.1"
edition = "2021"
authors = ["mcpads"]
# GPL-2.0-or-later is compatible with the adapters' upstream licenses — GPLv2 (Mednafen/Flycast),
# GPLv2+ (MAME), GPLv3 (Mesen). See NOTICE for upstream attributions.
license = "GPL-2.0-or-later"

[lib]
name = "emucap"
path = "src/lib.rs"

[[bin]]
name = "emucap"
path = "src/main.rs"

[[bin]]
name = "emucap-mcp"
path = "src/bin/emucap-mcp.rs"

[[bin]]
name = "emucap-broker"
path = "src/bin/emucap-broker.rs"

[[bin]]
name = "emucap-track-mcp"
path = "src/bin/emucap-track-mcp.rs"

[[bin]]
name = "emucap-mame-pc98-bridge"
path = "src/bin/emucap-mame-pc98-bridge.rs"

[[bin]]
name = "emucap-mame-neogeo-bridge"
path = "src/bin/emucap-mame-neogeo-bridge.rs"

[[bin]]
name = "emucap-mupen64plus"
path = "src/bin/emucap-mupen64plus.rs"

[[bin]]
name = "emucap-desmume-nds-bridge"
path = "src/bin/emucap-desmume-nds-bridge.rs"

[[bin]]
name = "emucap-ppsspp-bridge"
path = "src/bin/emucap-ppsspp-bridge.rs"

[[bin]]
name = "emucap-pcsx2-bridge"
path = "src/bin/emucap-pcsx2-bridge.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rmcp = { version = "1.8.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "time"] }
schemars = "1.2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
time = { version = "0.3", features = ["formatting"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tungstenite = "0.29"
fs2 = "0.4"

# setsid() for detached emulator launch; Unix only (Windows uses creation_flags).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
